--- a/info.yaml
+++ b/info.yaml
@@ -7,7 +7,7 @@ project:
 # Source files must be in ./src and you must list each source file separately
   source_files:        
     - tt_um_mayrmichael_cordic.v
-    - cordic_iterativ.v
+    - cordic_iterative.v
     - cordic_slice.v
   top_module:  "tt_um_mayrmichael_cordic"      # Put the name of your top module here, must start with "tt_um_". Make it unique by including your github username
 
