--- a/src/Makefile
+++ b/src/Makefile
@@ -9,7 +9,7 @@ TOPLEVEL_LANG ?= verilog
 ifneq ($(GATES),yes)
 
 # this is the only part you should need to modify:
-VERILOG_SOURCES += $(PWD)/tb.v $(PWD)/tt_um_seven_segment_seconds.v $(PWD)/decoder.v
+VERILOG_SOURCES += $(PWD)/tb.v $(PWD)/tt_um_mayrmichael_cordic.v $(PWD)/cordic_slice.v $(PWD)/cordic_iterative.v $(PWD)/cordic_convergence.v $(PWD)/sin_generator.v
 
 else
 
