--- a/test/cordic/makefile.iterative
+++ b/test/cordic/makefile.iterative
@@ -4,8 +4,8 @@
 SIM ?= icarus
 TOPLEVEL_LANG ?= verilog
 
-VERILOG_SOURCES += $(PWD)/../../src/cordic/cordic_slice.v
-VERILOG_SOURCES += $(PWD)/../../src/cordic/cordic_iterative.v
+VERILOG_SOURCES += $(PWD)/../../src/cordic_slice.v
+VERILOG_SOURCES += $(PWD)/../../src/cordic_iterative.v
 # use VHDL_SOURCES for VHDL files
 
 # TOPLEVEL is the name of the toplevel module in your Verilog or VHDL file
