Added cosim for sin_generator, removed Bug from cordic_convergence

--- a/test/cordic/Makefile
+++ b/test/cordic/Makefile
@@ -1,5 +1,12 @@
-slice:
+sin: clean
+	make -f makefile.sin
+
+slice: clean
 	make -f makefile.slice
 
-iterative:
+iterative: clean
 	make -f makefile.iterative
+
+clean:
+	rm -r sim_build
+	rm results.xml
