--- a/test/cordic/makefile.slice
+++ b/test/cordic/makefile.slice
@@ -4,6 +4,8 @@
 SIM ?= icarus
 TOPLEVEL_LANG ?= verilog
 
+VERILOG_INCLUDE_DIRS += $(PWD)/../../src/
+
 VERILOG_SOURCES = $(PWD)/../../src/cordic_slice.v
 # use VHDL_SOURCES for VHDL files
 
