--- a/info.yaml
+++ b/info.yaml
@@ -11,6 +11,10 @@ project:
     - cordic_slice.v
     - cordic_convergence.v
     - sin_generator.v
+    - counter.v
+    - sawtooth_generator.v
+    - square_puls_generator.v
+    - top_triangle_generator.v
   top_module:  "tt_um_mayrmichael_cordic"      # Put the name of your top module here, must start with "tt_um_". Make it unique by including your github username
 
 # How many tiles your design occupies? A single tile is about 167x108 uM.
