--- a/info.yaml
+++ b/info.yaml
@@ -12,7 +12,7 @@ project:
     - cordic_convergence.v
     - sin_generator.v
     - counter.v
-    - sawtooth_generator.v
+    - counter_res.v
     - square_puls_generator.v
     - top_triangle_generator.v
     - strobe_generator.v
