added new element wave_generator as top level element for generation

--- a/test/cordic/Makefile
+++ b/test/cordic/Makefile
@@ -7,6 +7,9 @@ slice: clean
 iterative: clean
 	make -f makefile.iterative
 
+wave: clean
+	make -f makefile.wave
+
 clean:
 	rm -r -f sim_build
 	rm -f results.xml
