--- a/test/spi/makefile.spi
+++ b/test/spi/makefile.spi
@@ -9,15 +9,15 @@ TOPLEVEL_LANG ?= verilog
 
 VERILOG_INCLUDE_DIRS += $(PWD)/../../src/
 
-VERILOG_SOURCES = $(PWD)/../../src/square_puls_generator.v
+VERILOG_SOURCES = $(PWD)/../../src/spi_master_only_tx_single_cs.v
 
 # use VHDL_SOURCES for VHDL files
 
 # TOPLEVEL is the name of the toplevel module in your Verilog or VHDL file
-TOPLEVEL = square_puls_generator
+TOPLEVEL = spi_master_only_tx_single_cs
 
 # MODULE is the basename of the Python test file
-MODULE = test_square_puls_generator
+MODULE = test_spi_master_only_tx_single_cs
 
 # include cocotb's make rules to take care of the simulator setup
 include $(shell cocotb-config --makefiles)/Makefile.sim
